--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Julia Queiroz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Julia Queiroz
+    <nav>
+        <ul> 
+        <li>
+            <a> Sobre mim </a>
+            </li>
+            <li>
+            <a> Projetos </a>
+        </li>
+             <li>
+            <a> Contato </a>
+        </li>
+        </ul>
+    </nav>
 </body>
 </html>
+
