--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </nav>
 <header>
 <div class="center">
+    <img src="./img/img1.jpeg">
+    <img src="./img/img2.jpeg">
+    <img src="./img/img3.jpeg">
+    <img src="./img/img4.jpeg">
+
     
 </body>
 </html>
