--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+ </div>
     <nav>
         <ul> 
           <li>
-           
             <a href="index.html">Sobre mim</a>
             </li>
             
@@ -21,7 +22,7 @@
         <li>
             <a href="contact.html">Contato</a>
         </li>
-        </ul>
+     </ul>
    
     </nav>
 <header>
