--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <img src="./img/img3.jpeg">
     <img src="./img/img4.jpeg">
 
-    
+</div>
+<h1> Educação Especial </h1>
+<h2> A sua oportunidade para aprender mais sobre educação especial! </h2>
+
 </body>
 </html>
 
