--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul> 
           <li>
-            <a href="index.html">Sobre mim</a>
+            <a href="index.html">Sobre Educação</a>
             </li>
             
             <li>
@@ -35,7 +35,22 @@
 </div>
 <h1> Educação Especial </h1>
 <h2> A sua oportunidade para aprender mais sobre educação especial! </h2>
+</header>
 
+</main>
+<section>
+    <h3> Sobre Educação </h3>
+    <p>A educação especial é um direito das pessoas com deficiência, Transtornos Globais do Desenvolvimento ou superdotação.</p>
+    </section>
+    <section>
+        <h3>Quem tem direito ao acesso à educação especial?</h3>
+        <p>Pessoas com deficiência (por exemplo, deficiência visual, auditiva, intelectual, física ou múltipla, em diferentes níveis e complexidade):
+            Indivíduos com Transtornos Globais do Desenvolvimento (como autismo e Síndrome de Asperger);
+            Pessoas com altas habilidades ou superdotação.</p>
+    </section>
+    <section>
+        <h3>Qual o papel de um professor de educação especial?</h3>
+        <p></p>
 </body>
 </html>
 
