--- a/index.html
+++ b/index.html
@@ -48,8 +48,20 @@
             Indivíduos com Transtornos Globais do Desenvolvimento (como autismo e Síndrome de Asperger);
             Pessoas com altas habilidades ou superdotação.</p>
     </section>
-    <section>
-        
-</body>
+    </main>
+
+    <footer>
+<a  href="https://github.com/" target="_blank" rel="noopener noreferrer">
+    <img src="./img/github logo.png"></img>
+    <p>Github</p>
+</a>
+<a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+    <img src="./img/youtube logo.jpg"></img>
+    <p>Youtube</p>
+</a>
+
+    </footer>
+        </body>
+
 </html>
 
