--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
     <img src="./img/youtube logo.jpg"></img>
     <p>Youtube</p>
 </a>
+  </footer>
+     </div>
 
-    </footer>
-        </body>
+</body>
 
 </html>
 
